new asound.conf with mic

--- a/proprietary/etc/asound.conf
+++ b/proprietary/etc/asound.conf
@@ -256,4 +256,48 @@ pcm.AndroidRecord {
 	}
 }
 
+pcm.CaptureDevice {
+	type hw
+	card 0
+	device 1
+}
 
+pcm_slave.CaptureSlave {
+	pcm CaptureDevice
+	format S16_LE
+	channels 2
+	rate 44100
+}
+
+pcm.VCapture {
+	type plug
+	slave CaptureSlave
+}
+
+pcm.rate_convert {
+	type plug
+	slave {
+		pcm "plughw:0,1"
+		format S16_LE
+		channels 2
+		rate 16000
+	}
+}
+pcm.rate_convert1 {
+	type plug
+	slave {
+		pcm "plughw:0,1"
+		format S16_LE
+		channels 2
+		rate 44100
+	}
+}
+pcm.rate_convert2 {
+	type plug
+	slave {
+		pcm "plughw:0,1"
+		format S16_LE
+		channels 2
+		rate 96000
+	}
+}
